# RedrobAI_hackathon

./: .gitignore  README.md  demo.ipynb  demo_candidates.jsonl  offline_preprocess.py  preflight.py  pyproject.toml  rank.py  ranking_core.py  sample_precomputed_data.pkl  submission_metadata.yaml
EDA/: EDA_report.md  eda_script.py
docs/: SUBMISSION_CHECKLIST.md  TECHNICAL_APPROACH.md
tests/: test_ranking.py
